--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,8 @@
  *= require_tree .
  *= require_self
  */
+ body{background-color:#F7EDF1}
+
  html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
  /* Extract from normalize.css by Nicolas Gallagher and Jonathan Neal git.io/normalize */
  html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}
