--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,9 +1,6 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @category.name %>
-</p>
-
-<%= link_to 'Edit', edit_category_path(@category) %> |
-<%= link_to 'Back', categories_path %>
+<h3 class="w3-center w3-padding w3-margin w3-light-grey"> #{ category.name.capitalize }</h3>
+<div class="w3-content">
+  <div class="w3-row-padding">
+      <%= render partial: "shared/product", collection: @products %>
+  </div>
+</div>
