--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,31 +1,10 @@
-<p id="notice"><%= notice %></p>
+<h3 class="w3-center w3-padding w3-margin w3-light-grey">Products</h3>
+<div class="w3-content">
+  <div class="w3-row-padding">
 
-<h1>Products</h1>
+      <%= render partial: "shared/product", collection: @products %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description.string</th>
-      <th>Price</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.name %></td>
-        <td><%= product.description.string %></td>
-        <td><%= product.price %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  </div>
 
-<br>
-
-<%= link_to 'New Product', new_product_path %>
+</div>
