--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -12,6 +12,9 @@ p, ol, ul, td {
   font-size: 13px;
   line-height: 18px;
 }
+a{
+  text-decoration: none;
+}
 
 pre {
   background-color: #eee;
@@ -19,18 +22,7 @@ pre {
   font-size: 11px;
 }
 
-a {
-  color: #000;
 
-  &:visited {
-    color: #666;
-  }
-
-  &:hover {
-    color: #fff;
-    background-color: #000;
-  }
-}
 
 th {
   padding-bottom: 5px;
