--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,10 +1,8 @@
 <h3 class="w3-center w3-padding w3-margin w3-light-grey">Products</h3>
 <div class="w3-content">
+  <p class="w3-button w3-round w3-hover-black w3-center"><%= link_to 'Add Product', new_admin_product_path%></p>
   <div class="w3-row-padding">
-
-      <%= render partial: "shared/product", collection: @products %>
-
-
+      <%= render partial: "admin_product", collection: @products %>
   </div>
 
 </div>
