--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,5 +1,15 @@
-<h1>New Product</h1>
+<div class="w3-content">
+  <div class="w3-container w3-padding w3-margin w3-display-center w3-card-4">
+    <h3>New Product</h3>
 
-<%= render 'form', product: @product %>
+    <%= simple_form_for [:admin, @product], do |f|  %>
+      <%= f.input :name %>
+      <%= f.input :description %>
+      <%= f.input :price %>
 
-<%= link_to 'Back', products_path %>
+      <%= f.association :categories, collection: Category.all, as: :checkboxes, include_hidden: false %>
+      <%= f.button :submit %>
+
+    <%= link_to 'Back to Product List', admin_products_path %>
+  </div>
+</div>
