add a back-ground image

--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :description.string %>
-    <%= form.text_field :description.string %>
+    <%= form.label :description %>
+    <%= form.text_field :description%>
   </div>
 
   <div class="field">
