--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,14 +1,20 @@
-<div class="3-content">
-  <p><%= link_to 'Add a Category', new_admin_category_path %></p>
-  <div class="w3-container w3-padding w3-margin w3-display-middle w3-card">
-    <div class="w3-table">
-      <tr>
-        <th>Name</th>
-      </tr>
-      <tbody>
-        <%= render partial: "admin_category", collection: @categories%>
-      </tbody>
-    </div>
+<h3 class="w3-center w3-padding w3-margin">Categories</h3>
+<div class="w3-content">
+  <div class="w3-center">
+    <p class="w3-center w3-green w3-button w3-hover-black w3-round" ><%= link_to 'Add Category', new_admin_category_path %></p>
+
+  </div>
+ <table class="w3-display-middle w3-content w3-card w3-table-all">
+   <tr class="w3-light-grey">
+     <th> Name</th>
+     <th> Edit</th>
+     <th> Delete</th>
+   </tr>
+   <tbody>
+     <%= render partial: "admin_category", collection: @categories%>
+   </tbody>
+
+
   </div>
 
 </div>
