--- a/app/views/admin/products/_admin_product.html.erb
+++ b/app/views/admin/products/_admin_product.html.erb
@@ -1,11 +1,11 @@
 <div class="w3-col s6 m4 l3">
-  <div class="w3-card-4 w3-padding w3-margin-bottom">
+  <div class="w3-card-4 w3-round w3-padding w3-margin-bottom w3-yellow">
     <div class="w3-container w3-center">
-      <p><%= admin_product.name %></p>
-      <p><%= admin_product.price %></p>
+      <h5 style="font-weight: bold"><%= admin_product.name %></h5>
+      <p style="font-weight: bold"> $ <%= admin_product.price %></p>
       <p><%= admin_product.description%></p>
-      <p class="w3-button"><%= link_to 'Edit', edit_admin_product_path(admin_product) %></p>
-      <p class="w3-button"><%= link_to 'Delete', admin_product_path(admin_product), method: :delete %></p>
+      <p class="w3-button w3-border w3-hover-green  w3-round w3-border-green"><%= link_to 'Edit', edit_admin_product_path(admin_product) %></p>
+      <p class="w3-button w3-border w3-hover-red w3-round w3-border-red"><%= link_to 'Delete', admin_product_path(admin_product), method: :delete %></p>
 
     </div>
   </div>
