--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,6 +1,17 @@
-<h1>Editing Product</h1>
+<div class="w3-content">
+  <div class="w3-container w3-padding w3-margin w3-display-center w3-card-4">
+    <h3 class="w3-center w3-padding w3-margin-bottom">Edit Product</h3>
+<div class="">
+  <%= simple_form_for [:admin, @product] do |f|  %>
+    <%= f.input :name %>
+    <%= f.input :description %>
+    <%= f.input :price %>
 
-<%= render 'form', product: @product %>
+    <%= f.association :categories, collection: Category.all, as: :check_boxes, include_hidden: false%>
+    <%= f.button :submit %>
+  <% end %>
+  <%= link_to 'Back to Product List', admin_products_path %>
 
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+</div>
+  </div>
+</div>
