--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,4 +1,4 @@
-<h3 class="w3-center w3-padding w3-margin w3-light-grey">My Cart</h3>
+<h3 class="w3-center w3-padding w3-margin">My Cart</h3>
 
 <div class="w3-content">
   <table class="w3-display-middle w3-content w3-card w3-table-all">
@@ -7,14 +7,15 @@
       <th> Price</th>
       <th> Quantity</th>
       <th> Subtotal</th>
-      <th>Add another</th>
-      <th>Remove one</th>
-      <th>Clear item from cart</th>
+      <th> Add one</th>
+      <th> Clear one</th>
+      <th> Clear all</th>
     </tr>
+
     <tbody>
-      <%= @cart_products_with_qty.each do |array|%>
-        <%= product = array[0] %>
-        <%= qty = array[1] %>
+      <% @cart_products_with_qty.each do |array|%>
+        <% product = array[0] %>
+        <% qty = array[1] %>
         <tr>
           <td><%= product.name %></td>
           <td><%= product.price %></td>
