--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,4 @@
-<h3 class="w3-center w3-padding w3-margin w3-light-grey"> #{ category.name.capitalize }</h3>
+<h3 class="w3-center w3-padding w3-margin"> Paintings in this category <% @category %></h3>
 <div class="w3-content">
   <div class="w3-row-padding">
       <%= render partial: "shared/product", collection: @products %>
