--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,10 +1,7 @@
-<h3 class="w3-center w3-padding w3-margin w3-light-grey">Products</h3>
+<h3 class="w3-center w3-padding w3-margin ">Art on Sale</h3>
 <div class="w3-content">
   <div class="w3-row-padding">
-
       <%= render partial: "shared/product", collection: @products %>
-
-
   </div>
 
 </div>
