install gon to manage braintree secret keys and creat a purchase model to join users to products purchased

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -28,7 +28,7 @@
       <% end %>
     </tbody>
     </table>
-    <div class="w3-label w3-border w3-border-green w3-display-bottom w3-right w3-yellow w3-round w3-padding w3-margin" style="font-weight:bold">
+    <div class="w3-label w3-border w3-border-green w3-display-bottom w3-right w3-yellow w3-round w3-padding " style="font-weight:bold">
       Total Cost :  $ <%= @cart_total%>
     </div>
 </div>
