--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,20 +14,20 @@
     <% if admin_signed_in?%>
     <div  class="w3-bar-item w3-button w3-mobile w3-yellow">Welcome admin!</div>
     <% end %>
-    <div  class="w3-bar-item w3-button w3-mobile w3-green"><%= link_to 'Home', welcome_index_path %></div>
+    <div  class="w3-bar-item w3-button w3-mobile w3-green w3-hover-yellow"><%= link_to 'Home', welcome_index_path %></div>
     <% if admin_signed_in?%>
-    <div  class="w3-bar-item w3-button w3-mobile"><%= link_to 'Categories', admin_categories_path %></div>
-    <div  class="w3-bar-item w3-button w3-mobile"><%= link_to 'Products', admin_products_path %></div>
+    <div  class="w3-bar-item w3-button w3-mobile w3-hover-yellow"><%= link_to 'Categories', admin_categories_path %></div>
+    <div  class="w3-bar-item w3-button w3-mobile w3-hover-yellow"><%= link_to 'Products', admin_products_path %></div>
     <% end %>
     <% if current_user %>
-    <div  class="w3-bar-item w3-button w3-mobile"><%= link_to 'Shop Art', products_path %></div>
-    <div  class="w3-bar-item w3-button w3-mobile"><%= link_to 'Art Lessons', products_path %></div>
-    <div  class="w3-bar-item w3-button w3-mobile w3-right "><%= link_to 'Sign out', destroy_user_session_path %></div>
-    <div  class="w3-bar-item w3-button w3-mobile w3-right w3-red"><%= link_to 'My Cart', cart_path %></div>
+    <div  class="w3-bar-item w3-button w3-mobile w3-hover-yellow"><%= link_to 'Shop Art', products_path %></div>
+    <div  class="w3-bar-item w3-button w3-mobile w3-hover-yellow"><%= link_to 'Art Lessons', products_path %></div>
+    <div  class="w3-bar-item w3-button w3-mobile w3-right w3-hover-yellow"><%= link_to 'Sign out', destroy_user_session_path %></div>
+    <div  class="w3-bar-item w3-button w3-mobile w3-right w3-red w3-hover-yellow"><%= link_to 'My Cart', cart_path %></div>
     <div  class="w3-bar-item w3-button w3-mobile w3-right w3-black w3-hover-black w3-text-black"><%= link_to 'Login as Admin', admin_products_path %></div>
     <% else %>
-    <div  class="w3-bar-item w3-button w3-mobile w3-right"><%= link_to 'Sign in', user_session_path %></div>
-    <div  class="w3-bar-item w3-button w3-mobile w3-right"><%= link_to 'Sign up', new_user_registration_path %></div>
+    <div  class="w3-bar-item w3-button w3-mobile w3-hover-yellow w3-right"><%= link_to 'Sign in', user_session_path %></div>
+    <div  class="w3-bar-item w3-button w3-mobile w3-hover-yellow w3-right"><%= link_to 'Sign up', new_user_registration_path %></div>
     <% end %>
   </div>
   <div class="w3-container">
