--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -5,7 +5,7 @@
 <div class="w3-padding w3-margin w3-round">
   <%= form_tag transactions_path do %>
   <p>Enter your payment address: </p>
-
+  <div id="dropin"></div>
       <%= submit_tag "Pay $ #{@current_user.cart_total_price}" %>
   <% end %>
 </div>
