create a subscription feature using stripe transactions handler

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <script src="https://js.braintreegateway.com/v2/braintree.js"></script>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= favicon_link_tag asset_path('lotus.png') %>
+    <%= favicon_link_tag asset_path('icon.png') %>
   </head>
   <body>
   <div class="w3-bar w3-black w3-card-4">
