--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,13 +1,24 @@
 <div class="w3-content">
-<h3 class="w3-center w3-padding w3-margin">Checkout</h3>
-<div class="w3-dislay-middle w3-mobile">
-<div class="w3-padding w3-margin w3-card-4 w3-yellow w3-round w3-display-middle">
-<div class="w3-padding w3-margin w3-round">
+<h3 class="w3-center">Checkout</h3>
+<div class="w3-dislay-middle">
+<div class="w3-padding w3-margin w3-card-4 w3-white w3-round w3-display-middle w3-half">
+<div class="w3-margin w3-round">
   <%= form_tag transactions_path do %>
-  <p>Enter your payment address: </p>
-  <div id="dropin"></div>
-      <%= submit_tag "Pay $ #{@current_user.cart_total_price}" %>
+  <h5 class="w3-center">Choose payment method </h5>
+  <div id="dropin" class="w3-margin "></div>
+  <button type="submit" class="w3-button w3-center w3-margin w3-border w3-border-green w3-text-green w3-hover-green w3-round"><%="Pay $ #{@current_user.cart_total_price}"%></button>
   <% end %>
+  <script type="text/javascript">
+  function setupBT() {
+    braintree.setup(gon.client_token, 'dropin', { container: 'dropin' });
+  }
+  if (window.addEventListener)
+    window.addEventListener("load", setupBT, false);
+  else if (window.attachEvent)
+    window.attachEvent("onload", setupBT);
+  else window.onload = setupBT;
+  </script>
+
 </div>
 </div>
 </div>
