create a webhook to receive stripe payments and notify the user of success

--- a/app/views/subscriptions/create.html.erb
+++ b/app/views/subscriptions/create.html.erb
@@ -1,2 +1,2 @@
-<h1>Subscriptions#create</h1>
-<p>Find me in app/views/subscriptions/create.html.erb</p>
+<h1>Subscriptions</h1>
+<p>Subscription is complete and successful</p>
