implement forum via simple discussion gem

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *
  *= require_tree .
  *= require_self
+ *= require simple_discussion
  */
  body {
    background: url('pencil.jpg') no-repeat center center fixed;
