--- a/app/views/subscriptions/create.html.erb
+++ b/app/views/subscriptions/create.html.erb
@@ -1,2 +1,10 @@
-<h1>Subscriptions</h1>
-<p>Subscription is complete and successful</p>
+<div class="w3-content">
+  <h3 class="w3-center w3-padding w3-margin">Subscription</h3>
+  <div class="w3-dislay-middle w3-mobile">
+    <div class="w3-padding w3-margin w3-card-4 w3-yellow w3-round w3-display-middle">
+      <div class="w3-padding w3-margin w3-round">
+      <p class="w3-center"> Success!! Art lessons are on the way!!!</p>
+      </div>
+    </div>
+  </div>
+</div>
