push complete to github

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,8 @@
 <br>
   <div class="w3-display-middle">
-
+    <div class="w3-center" >
+      <%= image_tag "icon.png", class:"w3-center", style:"width:25%"%>
+    </div>
     <h1 class="w3-jumbo w3-center w3-text-black w3-animate-top">Art n Cart</h1>
     <hr class="w3-border-black" style="margin:auto;width:40%">
     <p class="w3-large w3-center"><strong>Shop</strong> for awesome art pieces or <strong>Subscribe</strong> to our <em><u>art lessons</u></em> to create even greater pieces!</p>
